fix: updated Main.java and unit tests files